# embedded

./: .gitmodules  README.md
rp2040/: CMakeLists.txt  main.c  tusb_config.h
rp2040/src/: usb_descriptors.c
sam/: CMakeLists.txt  flash_sam.py  gdb_sam.txt
sam/src/main/: usb_main.c
sam/src/main/include/: usb_enable.h
sam/src/main/src/: usb_enable.c
sam/src/utils/include/: led_f.h
sam/usb_protocol/include/actions/: usb_actions.h
sam/usb_protocol/include/parser/: usb_flags.h
sam/usb_protocol/src/actions/: usb_actions.c
sam/usb_protocol/src/parser/: usb_flags.c
